@@ -8,8 +8,8 @@ import utils.ThemeManager;
 
 public class AnimatedProgressBar extends JComponent {
 
-    private float current = 0f;   // 0.0 – 1.0 (rendered value)
-    private float target  = 0f;   // 0.0 – 1.0 (goal value)
+    private float current = 0f;   
+    private float target  = 0f;   
     private Color trackColor = ThemeManager.BG_SURFACE;
     private Color fillColor1 = ThemeManager.ACCENT;
     private Color fillColor2 = ThemeManager.ACCENT_CYAN;
@@ -33,14 +33,15 @@ public class AnimatedProgressBar extends JComponent {
 
     
     public void setProgress(float value) {
-        target = Math.max(0f, Math.min(1f, value));
+        target = Math.clamp(value, 0f, 1f); 
+
         if (!timer.isRunning()) timer.start();
     }
 
     
     public void setProgressImmediate(float value) {
         timer.stop();
-        current = target = Math.max(0f, Math.min(1f, value));
+        current = target = Math.clamp(value, 0f, 1f); 
         repaint();
     }
 
@@ -48,21 +49,20 @@ public class AnimatedProgressBar extends JComponent {
     public void setFillColors(Color c1, Color c2) { fillColor1=c1; fillColor2=c2; repaint(); }
     public void setTrackColor(Color c) { trackColor = c; repaint(); }
     public void setArc(int arc)        { this.arc = arc; repaint(); }
+
     public float getProgress()         { return target; }
 
     @Override
     protected void paintComponent(Graphics g) {
         super.paintComponent(g);
+
         Graphics2D g2 = (Graphics2D) g.create();
         g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
 
         int w = getWidth(), h = getHeight();
 
-        // Track
         g2.setColor(trackColor);
         g2.fill(new RoundRectangle2D.Float(0, 0, w, h, arc, arc));
-
-        // Fill
         int fillW = (int)(w * current);
         if (fillW > 0) {
             Shape clip = g2.getClip();
@@ -70,9 +70,8 @@ public class AnimatedProgressBar extends JComponent {
             g2.setPaint(new GradientPaint(0, 0, fillColor1, fillW, 0, fillColor2));
             g2.fillRect(0, 0, fillW, h);
             g2.setClip(clip);
-        }
+        } 
 
-        // Label
         if (label != null) {
             g2.setFont(ThemeManager.FONT_SMALL);
             g2.setColor(Color.WHITE);
